Fix overflow issue.

--- a/dev/scss/components/_offcanvas.scss
+++ b/dev/scss/components/_offcanvas.scss
@@ -3,7 +3,7 @@ body,
 .offcanvas-wrapper,
 .offcanvas-push,
 .offcanvas-scroll {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
